# third_party

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  build_android.bat  build_android.sh  build_android_windows.py  build_ios.sh  build_linux.sh  build_macos.sh  build_windows32.bat  build_windows64.bat  build_windows64_uwp.bat  circle.yml  deploy_android.sh  deploy_ios.sh  deploy_macos.sh  deploy_windows64.bat
FreeType-2.7/: CMakeLists.txt
SPIRV-Cross/: CMakeLists.txt  spirv_common.hpp  spirv_cross.cpp
SPIRV-Tools/source/opt/: local_single_store_elim_pass.cpp
dxsdk/: CMakeLists.txt
dxsdk/Def/: d3d12.def
dxsdk/Include/: dxgi1_5.h
dxsdk/Lib/x64/: d2d1.lib  d3d10.lib  d3d10_1.lib  d3d11.lib  d3d12.lib  d3d9.lib  d3dcompiler.lib  d3dcsx.lib  d3dx10.lib  d3dx11.lib  d3dx9.lib  dinput8.lib  dsound.lib  dwrite.lib  dxgi.lib  dxguid.lib
dxsdk/Lib/x86/: d2d1.lib  d3d10.lib  d3d10_1.lib  d3d11.lib  d3d12.lib  d3d9.lib  d3dcompiler.lib  d3dcsx.lib  d3dx10.lib  d3dx11.lib  d3dx9.lib  d3dxof.lib  dinput8.lib  dsound.lib  dwrite.lib  dxgi.lib  dxguid.lib
glslang/: CMakeLists.txt
glslang/LibCompiler/: CMakeLists.txt  LibCompiler.cpp
glslang/glslang/Include/: intermediate.h
glslang/glslang/MachineIndependent/: ShaderLang.cpp  SymbolTable.h  localintermediate.h
glslang/glslang/Public/: ShaderLang.h
glslang/hlsl/: hlslAttributes.cpp  hlslAttributes.h  hlslGrammar.cpp  hlslParseHelper.cpp
imobiledevice/: CMakeLists.txt
imobiledevice/examples/: CMakeLists.txt  deviceid.c
imobiledevice/src/: CMakeLists.txt
imobiledevice/src/common/: CMakeLists.txt
imobiledevice/src/libusbmuxd/: CMakeLists.txt
rapidjson/: CMakeLists.txt
sqlite3/: CMakeLists.txt
steamworks_sdk/: CMakeLists.txt
tools/: __init__.py  android.py  third_party.cmake  win_pack.py  windows.py
tools/appveyor/: install_android.bat
vulkan/: CMakeLists.txt
vulkan/1.0.42.0/Lib/Windows/x86/: vulkan-1.lib
